# Cloud-Native-Development-Project

./: .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  docker-compose.backend-db.yml  docker-compose.ci.yml  docker-compose.db.yml  docker-compose.yml
backend/: .coverage  .dockerignore  .env.example  .gitignore  README.md  alembic.ini  celerybeat-schedule  database.py  dependencies.py  dockerfile  dockerfile.db  main.py  models.py  pyproject.toml  pyrightconfig.json  requirements-db.txt  requirements-dev.txt  requirements.txt  schemas.py  serializers.py
backend/alembic/: README  env.py
backend/alembic/versions/: 0001_initial.py  0002_c_machines_recipes_dispatches.py  0003_d_report_data_templates_progress.py  0004_d_wip_execution_experiment_data.py  0005_add_order_item_dependency_fields.py  358991d2b30b_merge_phone_experiment_data_heads.py  35aeb03a89e9_0007_e_add_lab_closed_to_wips.py  4aa6d7806036_0008_e_add_terminated_to_samples_status.py  999b46431692_0005_e_merge_notifications_sample_wip_.py  fea80b716b10_add_order_table.py  (+7 more)
backend/app/: bootstrap.py  main.py  routes.py
backend/db/: schema.sql
backend/routers/: dashboard.py  dispatches.py  health.py  machines.py  recipes.py  users.py
backend/scripts/: backfill_issue_escalation.py  seed_dashboard_demo.py  seed_dev.py  seed_experiments.py  seed_machines.py  seed_order.py  smoke_wip_dependency_next.py  sync_enums.py
backend/services/: scheduling.py
backend/sql/: 001_create_order_tables.sql  schema.sql
backend/tests/: conftest.py  test_auth.py  test_closures.py  test_dependencies.py  test_experiment_data.py  test_experiments.py  test_health.py  test_order_enums.py  test_order_flow_regressions.py  test_order_management.py  test_reports.py  test_route_integration.py  test_routes.py  test_sample_service.py  test_scheduling.py  test_schema_contract.py  test_schemas.py  test_serializers.py  test_tas_integration.py  test_transfer_service.py  test_wip_service.py
(+533 files in other folders)
